--- a/ansible/roles/deploy/tasks/symlink.yml
+++ b/ansible/roles/deploy/tasks/symlink.yml
@@ -17,5 +17,5 @@
     state: link
     path: "{{ ansistrano_deploy_to }}/{{ ansistrano_current_dir }}"
     src: "./{{ ansistrano_version_dir }}/{{ ansistrano_release_version }}"
-    owner: kkom
-    group: kkom
+    owner: root
+    group: root
