--- a/ansible/roles/deploy/tasks/setup.yml
+++ b/ansible/roles/deploy/tasks/setup.yml
@@ -4,30 +4,30 @@
   file:
     state: directory
     path: "{{ ansistrano_deploy_to }}"
-    owner: kkom
-    group: kkom
+    owner: root
+    group: root
 
 - name: ANSISTRANO | Ensure releases folder exists
   file:
     state: directory
     path: "{{ ansistrano_releases_path }}"
-    owner: kkom
-    group: kkom
+    owner: root
+    group: root
 
 - name: ANSISTRANO | Ensure shared elements folder exists
   file:
     state: directory
     path: "{{ ansistrano_shared_path }}"
-    owner: kkom
-    group: kkom
+    owner: root
+    group: root
 
 # Ensure shared path exists
 - name: ANSISTRANO | Ensure shared paths exists
   file:
     state: directory
     path: "{{ ansistrano_shared_path }}/{{ item }}"
-    owner: kkom
-    group: kkom
+    owner: root
+    group: root
   with_items: "{{ ansistrano_shared_paths }}"
   when: ansistrano_ensure_shared_paths_exist|bool
 
@@ -36,7 +36,7 @@
   file:
     state: directory
     path: "{{ ansistrano_shared_path }}/{{ item | dirname }}"
-    owner: kkom
-    group: kkom
+    owner: root
+    group: root
   with_items: "{{ ansistrano_shared_files }}"
   when: ansistrano_ensure_basedirs_shared_files_exist|bool
