--- a/ansible/roles/nginx-rpm/files/nginx.conf
+++ b/ansible/roles/nginx-rpm/files/nginx.conf
@@ -1,7 +1,7 @@
 user www www;
 worker_processes auto;
 
-error_log /yl/logs/nginx/error_nginx.log crit;
+error_log /opt/logs/nginx/error_nginx.log crit;
 pid /var/run/nginx.pid;
 worker_rlimit_nofile 51200;
 
@@ -66,8 +66,8 @@ http {
   server {
     listen 80;
     server_name _;
-    access_log /yl/logs/nginx/access_nginx.log combined;
-    root /yl/data/vhost/default;
+    access_log /opt/logs/nginx/access_nginx.log combined;
+    root /opt/data/vhost/default;
     index index.html index.htm index.php;
     #error_page 404 /404.html;
     #error_page 502 /502.html;
