--- a/ansible/roles/rollback/defaults/main.yml
+++ b/ansible/roles/rollback/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # Path where the code must be deployed to
-ansistrano_deploy_to: "/yl/app"
+ansistrano_deploy_to: "/opt/app"
 
 # Folder name for the releases
 ansistrano_version_dir: "releases"
