--- a/ansible/roles/deploy/meta/main.yml
+++ b/ansible/roles/deploy/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   author: ansistrano
-  description: Ansible role to deploy scripting applications like PHP, Python, Ruby, etc. in a Capistrano style
+  description: Ansible role to deploy scripting applications like PHP, Python, Ruby, etc. in a Capistrano stopte
   company: Ansistrano
   license: MIT
   min_ansible_version: 2.4
