--- a/ansible/roles/nginx-tar/tasks/main.yml
+++ b/ansible/roles/nginx-tar/tasks/main.yml
@@ -10,7 +10,7 @@
     dest: /usr/local/src
 
 - name: check nginx
-  shell: ls /yl/app/openresty
+  shell: ls /opt/app/openresty
   register: check_nginx
   ignore_errors: true
 
@@ -19,7 +19,7 @@
   when: check_nginx is failure
 
 - name: mv nginx
-  shell: mv /usr/local/src/openresty /yl/app/openresty
+  shell: mv /usr/local/src/openresty /opt/app/openresty
   when: check_nginx is failure
 
 - name: sync nginx.service configure file
@@ -30,25 +30,25 @@
 - name: sync nginx.conf configure file
   copy:
     src: nginx.conf
-    dest: /yl/app/openresty/nginx/conf/nginx.conf
+    dest: /opt/app/openresty/nginx/conf/nginx.conf
   when: check_nginx is failure  
   
 - name: create nginx vhost directory
-  file: path=/yl/app/openresty/nginx/conf/vhost state=directory
+  file: path=/opt/app/openresty/nginx/conf/vhost state=directory
 
 - name: create nginx log directory
-  file: path=/yl/logs/nginx state=directory
+  file: path=/opt/logs/nginx state=directory
 
 - name: chown nginx log mode
-  shell: useradd www -M -s /sbin/nologin && chown -R www.www /yl/logs/nginx
+  shell: useradd www -M -s /sbin/nologin && chown -R www.www /opt/logs/nginx
   ignore_errors: true
 
 - name: soft link nginx conf
-  file: src=/yl/app/openresty/nginx/conf dest=/etc/nginx state=link
+  file: src=/opt/app/openresty/nginx/conf dest=/etc/nginx state=link
   ignore_errors: true
 
 - name: soft link nginx bin
-  file: src=/yl/app/openresty/nginx/sbin/nginx dest=/bin/nginx state=link
+  file: src=/opt/app/openresty/nginx/sbin/nginx dest=/bin/nginx state=link
   ignore_errors: true
 
 - name:  nginx daemon-reload
