--- a/ansible/rollback-default.yml
+++ b/ansible/rollback-default.yml
@@ -3,7 +3,7 @@
   hosts: "{{ app_host }}"
   gather_facts: no
   vars:
-    ansistrano_deploy_to: "/yl/app/{{ app_name }}"
+    ansistrano_deploy_to: "/opt/app/{{ app_name }}"
     ansistrano_remove_rolled_back: yes
   roles:
     - { role: rollback }
