--- a/ansible/deploy-node.yml
+++ b/ansible/deploy-node.yml
@@ -3,9 +3,9 @@
   remote_user: root
   vars:
     ansistrano_deploy_from: "{{ app_from }}"
-    ansistrano_deploy_to: "/opt/app/{{ app_name }}"
+    ansistrano_deploy_to: "/opt/static/{{ app_name }}"
     ansistrano_release_version: "{{ app_version }}"
-    ansistrano_keep_releases: 10
+    ansistrano_keep_releases: 5
     ansistrano_deploy_via: rsync
   roles:
     - { role: deploy }
